<resources>

    <string name="app_name">Ticka Mizban</string>

    <string name="app_rules">•	تیکا تعهد می‌کند نسبت به دریافت تمام مبلغ رزرو اقامتگاه از مسافر به صورت الکترونیک اقدام کرده و پس از کسر 5% از مبلغ مزبور به عنوان حق‌الزحمه از مجموع مبلغ دریافتی، در تاریخ ورود مسافر به اقامتگاه به حساب اعلامی از سوی میزبان در حساب کاربری ایشان واریز ‌شود.\n\n
•	برای تعریف اقامتگاه در تیکا لازم است که هر کاربر یک حساب کاربری در آن ایجاد کند. تنها مالک اقامتگاه و نماینده قانونی ایشان می‌توانند اقدام به ساخت حساب کاربری جهت ثبت اقامتگاه در تیکا کنند.\n\n
•	میزبان می‌پذیرد اقامتگاهی را ثبت کند که اجازه اجاره دادن آن را بر اساس قانون داشته باشد. در غیر این‌صورت مسئولیت مشکلات بعدی برعهده ایشان خواهد بود.\n\n
•	میزبان می‌تواند چندین اقامتگاه را در یک حساب کاربری تعریف کند، اما مجاز نیست که یک اقامتگاه را دوبار تعریف کند، در صورت مشاهده، اقامتگاه و نام کاربری ایشان مسدود می‌شود.\n\n
•	میزبان متعهد می‌شود که مشخصات اقامتگاه و امکانات آن را دقیقاً مطابق آنچه که هست در تیکا تعریف کند، همچنین متعهد می‌شود اقامتگاه خود را دقیقاً مطابق تصاویر و توضیحات درج شده در تیکا در اختیار مهمان قرار دهد. در غیر این‌صورت، میزبان مسئول جلب رضایت مهمان است و در صورت تکرار، اقامتگاه و نام کاربری ایشان مسدود می‌شود.\n\n
•	میزبان می‌پذیرد که کمیسیون تیکا در قیمت اقامتگاه محاسبه شده است.\n\n
•	میزبان می‌تواند درخواست اقامت را بپذیرد و یا رد کند. در صورتی که میزبان درخواست اقامتی را پذیرفت، متعهد به ارائه خدمات براساس آن درخواست است در غیر این‌صورت خسارات وارده به شرکت و عواقب ناشی از آن بر عهده میزبان است و از محل مطالبات ایشان برداشت خواهد شد. همچنین تیکا می‌تواند حساب کاربری و اقامتگاه میزبان را مسدود کند.\n\n
•	میزبان متعهد می‌شود در طول زمان اقامت مهمان در اقامتگاه، در دسترس مهمان و تیکا باشد.\n\n
•	میزبان می‌پذیرد ثبت اقامتگاه در تیکا توسط ایشان به منزله تأیید و نمایش آن اقامتگاه نخواهد بود و تیکا حق تایید و یا عدم تایید اقامتگاه‌ها را برای خود محفوظ می‌دارد.\n\n
•	میزبان متعهد است در صورت عدم تمایل به همکاری، اقامتگاه خود را در تیکا غیرفعال کند، مشروط بر اینکه رزرو فعالی نداشته باشد (رزروی که تایید شده است، اما هنوز تاریخ اقامت فرا نرسیده است). در صورت داشتن رزرو فعال ابتدا می‌بایست از طریق پنل قیمت‌گذاری، قیمت تمام روزهای اقامتگاه خود را حذف کند تا امکان رزرو مجدد توسط مهمان وجود نداشته باشد، سپس بعد از ارائه خدمات به آخرین رزرو فعال، می‌‌تواند اقامتگاه خود را غیرفعال کند.\n\n
•	میزبان متعهد می‌شود تمامی اطلاعات مهمان نزد ایشان محرمانه بوده و از افشای آن خودداری کند.\n\n
•	از آنجایی که قیمت‌گذاری اقامتگاه در تیکا به معنای 100 درصد آماده رزرو بودن آن است، میزبان متعهد می‌شود چنانچه بنا به هر دلیل در تاریخی امکان در اختیار گذاشتن اقامتگاه از طریق تیکا را نداشت، از قیمت‌گذاری آن تاریخ خودداری کند، همچنین اگر روز مذکور از قبل قیمت‌گذاری شده بود، با مراجعه مجدد به پنل قیمت‌گذاری، تاریخ مذکور را با حذف قیمت از لیست خارج کند. به‌طور خلاصه، میزبان متعهد می‌شود تقویم قیمت‌گذاری خود را به‌روز نگه دارد. همچنین در صورتی که میزبانی 3 بار درخواست رزروهای مختلف را تأیید نکند، نام کاربری ایشان مسدود می‌شود.\n\n
•	میزبان می‌پذیرد که تیکا در آینده می‌تواند با توجه به سیاست‌های تجاری خود، میزان حق‌الزحمه را با اطلاع قبلی به ایشان افزایش و یا کاهش دهد.
</string>

    <string name="general_title"><b><font color="black"><font color="red">*</font> عنوان اقامتگاه :</font></b></string>
    <string name="general_state"><b><font color="black"><font color="red">*</font> استان :</font></b></string>
    <string name="general_city"><b><font color="black"><font color="red">*</font> شهر :</font></b></string>
    <string name="general_phone"><b><font color="black"><font color="red">*</font> تلفن اقامتگاه :</font></b></string>
    <string name="general_address"><b><font color="black"><font color="red">*</font> آدرس :</font></b></string>
    <string name="general_description"><b><font color="black">توضیحات بیشتر :</font></b></string>

    <string name="capacity_1"><b><font color="black"><font color="red">*</font> ظرفیت استاندارد :</font></b></string>
    <string name="capacity_2"><b><font color="black"><font color="red">*</font> حداکثر ظرفیت :</font></b></string>
    <string name="capacity_3"><b><font color="black"><font color="red">*</font> تعداد تخت خواب 1 نفره :</font></b></string>
    <string name="capacity_4"><b><font color="black"><font color="red">*</font> تعداد تخت خواب 2 نفره :</font></b></string>
    <string name="capacity_5"><b><font color="black"><font color="red">*</font> تعداد سرویس خواب اضافه :</font></b></string>

    <string name="minor_1"><b><font color="black"><font color="red">*</font> حداقل شب و روز اقامت :</font></b></string>
    <string name="minor_2"><b><font color="black"><font color="red">*</font> حداکثر شب و روز اقامت :</font></b></string>

</resources>
