<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/general_title"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/inputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/selector_edt"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:text="@string/general_state"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_edt_normal">

                    <Spinner
                        android:id="@+id/stateList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:text="@string/general_city"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_edt_normal">

                    <Spinner
                        android:id="@+id/cityList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/general_phone"
                    android:textColor="@color/colorBlack"
                    android:padding="5dp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/selector_edt"
                    android:padding="10dp"
                    android:textColorHint="@color/gray500"
                    android:digits="0123456789"
                    android:hint="ex: 02112345678"
                    android:textSize="16sp"
                    android:maxLength="13"
                    android:inputType="phone"
                    android:textColor="@color/colorBlack"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:text="@string/general_address"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/inputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/selector_edt"
                    android:maxLines="5"
                    android:minLines="3"
                    android:gravity="top"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    tools:ignore="Autofill,LabelFor" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:padding="5dp"
                    android:text="@string/general_description"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/inputDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/selector_edt"
                    android:maxLines="3"
                    android:textSize="16sp"
                    android:minLines="2"
                    android:padding="10dp"
                    android:textColorHint="@color/gray500"
                    android:hint="مثل فاصله از موقعیت های خاص"
                    android:textColor="@color/colorBlack"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>